    ADDED: thumbnails - toggleable by mainmenu > view > Show Previews
    ADDED: 128x128 pixel versions of the application icon, needed by Mac OS X
    ADDED: Konfigurator options: Look&Feel > Panel >
           Status/Totalsbar settings > Draw frame / Fill background
    ADDED: Konfigurator option: Colors > Colors > Other > Statusbar
    ADDED: Konfigurator option: Look&Feel > Panel > Panel layout >
           Quicksearch position / Tab Bar position
    ADDED: buttons "(un)mount" and "eject" in mountman gui
    ADDED: KMountMan::removable(), KMountMan::networkFilesystem()

  CHANGED: dim icons in unfocused panel (if dim colors is activated)
  CHANGED: mountman gui: retrieve icons from Solid
  CHANGED: mountman gui: change mount check interval from 3000 to 500 ms
  CHANGED: mountman gui: current selection persists refresh of mountlist,
           mountlist is focused after refresh
  CHANGED: dont't execute a process if the correct working dir cannot be set
  CHANGED: dont't retrieve working dir of the cmdline from the label which might get truncated
           - store it in a string instead

    FIXED: [ 2907607 ] crash while closing
    FIXED: if a panel is focused by clicking on the header, the colors/actions are not updated
    FIXED: mountman: unmounting is not possible if currently opened dir is below the mountpoint
    FIXED: [ 2860400 ] Drag'n'drop to kmail broken
    FIXED: [ 2904850 ] panels are not repainted
    FIXED: deadlock when trying to display error message after failed mount
    FIXED: [ 2858133 ] wrong background color in listviews

2.1.0-beta1 "Rusty Clutch"
==========================

    ADDED: file regex in quick search, thanks to GregC
    ADDED: lister: a fast text/hex viewer for Krusader
    ADDED: service menu, thanks to Tomasz Kalkosinski
    ADDED: queued packing / unpacking
    ADDED: lock tabs, close inactive tabs, close duplicated tabs
    ADDED: better trash integration
