@@ -6,6 +6,10 @@
 - extension to the ChangeLog.
 ------------------------------------------------------------------------
 
+New feature: change icon size individually per view
+    - 3 new actions: zoom in, zoom out, default zoom in mainmenu > view
+    - sizes are NOT yet saved/restored
+
 New feature: thumbnails for the listviews
     - new action "Show Previews" which can also be found in mainmenu > view
     - toggleable separately per view
