@@ -1,3 +1,4 @@
+    ADDED: change icon size individually per view
     ADDED: thumbnails - toggleable by mainmenu > view > Show Previews
     ADDED: 128x128 pixel versions of the application icon, needed by Mac OS X
     ADDED: Konfigurator options: Look&Feel > Panel >
